# turbo-quant

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
csrc/: common.cuh  polar_transform_kernel.cu  qjl_quant_kernel.cu  qjl_score_kernel.cu  turbo_dequant_kernel.cu  turbo_gqa_score_kernel.cu  turbo_quant_kernel.cu  turbo_score_kernel.cu  value_quant_kernel.cu
examples/: basic_generation.py  compare_methods.py  test_3bit_inference.py  test_gguf_inference.py
tests/: test_cache.py  test_codebook.py  test_e2e.py  test_paper_bounds.py  test_polar.py  test_qjl.py  test_turbo_mse.py  test_turbo_prod.py
turbo_quant/: __init__.py  config.py
turbo_quant/attention/: __init__.py  score_estimator.py  turbo_attention.py
turbo_quant/cache/: __init__.py  buffer_manager.py  outlier_detector.py  turbo_cache.py
turbo_quant/kernels/: __init__.py  quant_ops.py  score_ops.py
turbo_quant/models/: __init__.py  gemma.py  llama.py  llamacpp.py  mistral.py  model_patcher.py
turbo_quant/quantizers/: __init__.py  codebook.py  polar.py  qjl.py  rotation.py  turbo_mse.py  turbo_prod.py  value_quant.py
